--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "@docs/api-article": "file:docs-api-article",
     "@docs/articles": "file:docs-articles",
     "@docs/build": "file:docs-build",
     "@docs/cards": "file:docs-cards",
