build: add streaming interface

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@docs/articles": "file:docs-articles",
     "@docs/build": "file:docs-build",
     "@docs/cards": "file:docs-cards",
-    "@docs/html-base": "file:docs-html-base",
     "@docs/footer": "file:docs-footer",
     "@docs/gh-button": "file:docs-gh-button",
     "@docs/header": "file:docs-header",
     "@docs/highlight": "file:docs-highlight",
+    "@docs/html-base": "file:docs-html-base",
     "@docs/learnblocks": "file:docs-learnblocks",
     "@docs/metrics": "file:docs-metrics",
     "@docs/nav": "file:docs-nav",
@@ -41,6 +41,7 @@
     "css-wipe": "^1.0.1",
     "directory-to-json": "^1.3.0",
     "global": "^4.3.0",
+    "is-stream": "^1.0.1",
     "minimist": "^1.1.1",
     "object-assign": "^1.0.0",
     "react": "^0.11.2",
